# ticker

./: .env_example  .gitignore  LICENSE  Makefile  README.md  aliases  docker-compose.yaml  pyproject.toml  requirements.txt  tickers.json
app/: Dockerfile  server.py
tests/: test_ticker.py
ticker/: __init__.py  main.py  my_ticker.py  pyproject.toml
web/: price.html
web/js/: config.js
