[tool.poetry]
name = "ticker"
version = "0.1.0"
description = ""
authors = ["Gustavo Schaedler - gustavo <gustavopoa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.70"
rich = "^12.0.1"
plotext = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.3.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"
blue = "^0.8.0"
pip-audit = "^2.1.1"
prospector = "^1.7.7"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
